# code-review-openenv

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  MANUAL_DEPLOYMENT.md  PUSH_TO_HF.md  README.md  STATUS.md  SUPPORT_EMAIL.md  __init__.py  app.py  client.py  deploy.py  deploy_direct.py  inference.py  openenv.yaml  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt
outputs/: .gitkeep
server/: app.py
src/: environment.py  grader.py  models.py  rewards.py  tasks.py
tasks/: easy.json  hard.json  medium.json
tests/: test_environment.py  test_grader.py  test_integration.py  test_properties.py  test_rewards.py  test_tasks.py
